--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,14 @@ services:
       - '5050:80'
     depends_on:
       - postgres
+  
+  redis:
+    container_name: redis
+    image: redis:7
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis:/data
+
+volumes:
+  redis:
